# conferencebuddy

./: .gitignore
ConferenceBuddy/: CMakeLists.txt  main.cpp
ConferenceBuddy/dataconference/: CMakeLists.txt  dataconference.cpp  dataconference.h  dataformat.cpp  dataformat.h  datajsonformat.cpp  datajsonformat.h  dataxmlformat.cpp  dataxmlformat.h  factoryformat.cpp  factoryformat.h
ConferenceBuddy/dataconference/converter/: convertertoxmlschema.cpp  convertertoxmlschema.h
ConferenceBuddy/dataconference/schema/: schema.cpp  schema.h
ConferenceBuddy/dataconference/schema/giggity/: giggity.cpp  giggity.h  giggitydaytag.cpp  giggitydaytag.h  giggityeventtag.cpp  giggityeventtag.h  giggityroomtag.cpp  giggityroomtag.h
ConferenceBuddy/detailview/: CMakeLists.txt  detailview.cpp  detailview.h  detailviewbuilder.cpp  detailviewbuilder.h  detailviewfactory.cpp  detailviewfactory.h  maindetailview.cpp  maindetailview.h
ConferenceBuddy/detailview/fosdem/: fosdemdetailview.cpp  fosdemdetailview.h  fosdemview.cpp  fosdemview.h
ConferenceBuddy/detailview/tuebix/: tuebixdetailview.cpp  tuebixdetailview.h  tuebixview.cpp  tuebixview.h
ConferenceBuddy/src/: mainwindow.h
ConferenceBuddy/src/gui/: mainwindow.cpp  mainwindow.h
ConferenceBuddy/src/gui/conferenceselection/: conferenceselection.cpp  conferenceselection.h
ConferenceBuddy/src/gui/listconferences/: conferencelistdetail.cpp  conferencelistdetail.h
ConferenceBuddy/src/models/: conferenceselectiontablemodel.cpp  conferenceselectiontablemodel.h  conferencetablemodel.cpp  conferencetablemodel.h
